# MonOS

./: .gitattributes  .gitignore  CMakeLists.txt  README.MD  computer.cpp  config.txt  exec_computer.sh  exec_printer.sh  execute.sh  factorial_program.MD  factorial_program.asm  factorial_program.txt  gen_executable.sh  load.cpp  makefile  print.cpp  printer.cpp  prog-idle.txt  prog1.txt  scheduler.cpp  shell.cpp
computer/: computer.h  print.h
computer_utility/: computer_utility.cpp  computer_utility.h
connector/: client_connector.cpp  client_connector.h  server_connector.cpp  server_connector.h
cpu/: cpu.cpp  cpu.h
device_manager/printer/: printer.h
device_manager/printer/communicator/: communicator.cpp  communicator.h
device_manager/printer/printer_manager/: printer_manager.cpp
memory/: load.h  memory.cpp  memory.h
memory/loader/: load.h
memory/resident_set/: resident_set.cpp  resident_set.h
printer/: printer.h
printer/communicator/: communicator.cpp
printer/printer_manager/: printer_manager.cpp  printer_manager.h
printer_utility/: printer_utility.cpp  printer_utility.h
scheduler/: queue.cpp  queue.h  scheduler.h
shell/: shell.h
utility/: utility.cpp  utility.h
utility/computer_utility/: computer_utility.cpp  computer_utility.h
utility/file_utility/: file_utility.cpp  file_utility.h
